manifests/external-secrets/netpol-external-secrets.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets
  namespace: external-secrets
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: external-secrets
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "*.1password.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
