manifests/external-secrets/netpol-onepassword-connect.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: onepassword-connect
  namespace: external-secrets
spec:
  endpointSelector:
    matchLabels:
      app: onepassword-connect
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: external-secrets
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
            - port: "8081"
              protocol: TCP
  egress:
    - toFQDNs:
        - matchPattern: "*.1password.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
